syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.qrpc";
option java_outer_classname = "Meta";

package qrpc.meta;

message RpcMetaData {
  string service_name = 1;
  int32 method_id = 2;
  bytes content = 3;
  Status status = 4;
  Type type = 5;
  string request_id = 6;
}

enum Status {
  SUCCESS = 0;
  TIME_OUT = 2;
  SERVICE_NOT_FOUND = 3;
}

enum Type {
  REQUEST = 0;
  RESPOND = 1;
  PEER = 2;
}